# cp2077-voiceswap

./: .env.example  .gitignore  README.md  RVC-installation.md  install.ps1  pyproject.toml
libs/: infer_batch_rvc.py  rvc_f0.py  rvc_uvr.py
src/: args.py  config.py  main.py  webui.py  wem2wav.py  workflow.py  ww2wav.py
src/lib/: bnk_reader.py  ffmpeg.py  opuspak.py  opustoolz.py  rvc.py  sfx_mapping.py  tts.py  uvr.py  vgmstream.py  wolvenkit.py  ww2ogg.py  wwise.py  wwiser.py
src/util/: __init__.py  async_watchdog.py  parallel.py
