[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cp2077_voiceswap"
version = "0.0.1"
authors = [
  { name="Zhincore", email="adam@zhincore.eu" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies  = [
  "asyncio",
  "python-dotenv",
  "typing_extensions",
  "tqdm",
  "waapi-client",
  "nest-asyncio",
  "watchdog",
  "colorama",
]

[project.optional-dependencies]
tts = ["TTS"]
dev = ["isort", "pygls", "lsprotocol", "black"]

[project.scripts]
voiceswap = "main:main"
# clear_cache = "main:clear_cache"
# extract_files = "main:extract_files"
# export_wem = "main:export_wem"
# isolate_vocals = "main:isolate_vocals"
# revoice = "main:revoice"
# merge_vocals = "main:merge_vocals"
# wwise_imports= "main:wwise_import"
# pack_files = "main:pack_files"

[project.urls]
"Homepage" = "https://github.com/zhincore/cp2077-voiceswap"
"Bug Tracker" = "https://github.com/zhincore/cp2077-voiceswap/issues"
